# kawa-http-admin/src/main/resources/openapi.yaml
@@ -184,7 +184,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RoleValueView'
+                $ref: '#/components/schemas/RolePutView'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
@@ -244,7 +244,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GroupValueView'
+                $ref: '#/components/schemas/GroupPutView'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
@@ -834,7 +834,7 @@ components:
           items:
             $ref: '#/components/schemas/AclConfig'
           description: The ACLs making up this role.
-    RoleValueView:
+    RolePutView:
       type: object
       properties:
         acls:
@@ -868,7 +868,7 @@ components:
           items:
             type: string
           description: The roles whose ACLs every client inherits.
-    GroupValueView:
+    GroupPutView:
       type: object
       properties:
         clients:
